// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveFunds should not render qrcode without an address 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bSxmtR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Receive Funds
          </h2>
          <div
            class="flex-1"
          >
            <div
              data-testid="ReceiveFunds__address"
            >
              <div
                class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 eMJHaj no-ligatures"
                data-testid="TransactionDetail"
              >
                <div
                  class="flex-1 space-y-2 w-40 whitespace-nowrap"
                >
                  <div
                    class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                  >
                    Address
                  </div>
                  <div
                    class="font-semibold"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                      />
                      <span
                        class="flex flex-grow text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="relative focus:outline-none group"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                          />
                          <div
                            class="sc-bdfBwQ dnaihB"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="-space-x-2 whitespace-nowrap"
                >
                  <div
                    aria-label="ARK Devnet"
                    class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
                    data-testid="NetworkIcon-ARK-ark.devnet"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt"
                      data-testid="NetworkIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div>
              <button
                class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST mt-8 w-full"
                data-testid="ReceiveFunds__toggle"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Specify Amount
                </div>
              </button>
            </div>
            <div
              class="mx-auto mt-8 w-64 h-64"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render with a wallet name 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bSxmtR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Receive Funds
          </h2>
          <div
            class="flex-1"
          >
            <div
              data-testid="ReceiveFunds__name"
            >
              <div
                class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 eMJHaj no-ligatures"
                data-testid="TransactionDetail"
              >
                <div
                  class="flex-1 space-y-2 w-40 whitespace-nowrap"
                >
                  <div
                    class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                  >
                    Name
                  </div>
                  <div
                    class="font-semibold"
                  >
                    My Wallet
                  </div>
                </div>
                <div
                  aria-label="ARK Devnet"
                  class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-bdfBwQ hjDozt"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-testid="ReceiveFunds__address"
            >
              <div
                class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 eMJHaj no-ligatures"
                data-testid="TransactionDetail"
              >
                <div
                  class="flex-1 space-y-2 w-40 whitespace-nowrap"
                >
                  <div
                    class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                  >
                    Address
                  </div>
                  <div
                    class="font-semibold"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                      >
                        <span
                          class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                          data-testid="Address__address"
                        >
                          abc
                        </span>
                      </div>
                      <span
                        class="flex flex-grow text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="relative focus:outline-none group"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                          />
                          <div
                            class="sc-bdfBwQ dnaihB"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="-space-x-2 whitespace-nowrap"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="abc"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                        title="abc"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <button
                class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST mt-8 w-full"
                data-testid="ReceiveFunds__toggle"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Specify Amount
                </div>
              </button>
            </div>
            <div
              class="mx-auto mt-8 w-64 h-64"
            >
              <img
                alt="QR Code"
                class="p-3 w-64 h-64 rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="ReceiveFunds__qrcode"
                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAAkTSURBVO3BQYolV69G0Z0iJ1IF1ZZA8x+CQJqIO6ba+TfdMHH8XiTBvZa/tT7++PP3FwulB3fVNFfSg6fUNHelB0+pae5KD55S01xJD+6qabYxRGQ9Q0TWM0RkPUNE1jNEZD1DRNYzRGS9T/5BevCOappXqGlO0oMrNc1TappXSA9Oapq70oOT9OAV0oN3VNNcMURkPUNE1jNEZD1DRNYzRGQ9Q0TWM0RkvU++qaZ5QnrwlJrmJD24UtOc1DRPSQ9eoaa5UtOcpAcnNc2Vmuau9OBVaponpAd3GSKyniEi6xkisp4hIusZIrKeISLrfSL/L+nBXTXNSXpwUtNcSQ9Oapq70oMrNc13pAdXapq7apqT9OC/xBCR9QwRWc8QkfUMEVnPEJH1DBFZzxCR9T6Rv6lprqQHJzXNXTXNSXpwpaY5SQ/uqmnuqmleIT2Qvxgisp4hIusZIrKeISLrGSKyniEi633yTemB/CU9uFLTnKQHJzXNXTXNXenBXTXNSXqwTXrwbgwRWc8QkfUMEVnPEJH1DBFZzxCR9QwRWe+Tf1DT/NekB1dqmpP04BXSg5Oa5kp6cFLTXEkPnlLTnKQHV2qak/Tgrprm38YQkfUMEVnPEJH1DBFZzxCR9QwRWc8QkfU+0wP5v0sPTmqaV6hpTtKDV0gPTmqau2qaJ6QH2xgisp4hIusZIrKeISLrGSKyniEi63388efvLw7Sg5Oa5h2lB3fVNHelB3fVNE9JD67UNCfpwSvUNCfpwRNqmneUHtxliMh6hoisZ4jIeoaIrGeIyHqGiKxniMh6Hz9+/vriITXNSXrwlJrm3aQHr1LTXEkPTmqaK+nBSU1zV3pwUtPclR5cqWlO0oOn1DRX0oOTmuaKISLrGSKyniEi6xkisp4hIusZIrLex4+fv744qGlO0oMrNc2/UXpwpaY5SQ9eoaY5SQ+u1DR3pQffUdNcSQ/uqmnuSg+2MURkPUNE1jNEZD1DRNYzRGQ9Q0TWM0Rkvc+a5jtqmivpwV01zUl6cFdNc1d6cFLT3JUenNQ0V9KDu9KDu2qak/TgKTXNK9Q0J+nBlZrmFQwRWc8QkfUMEVnPEJH1DBFZzxCR9T5+/Pz1xRuqab4jPbhS05ykB/82Nc1JenBXTXMlPXhKTXOSHlypae5KD05qmrvSg6fUNFcMEVnPEJH1DBFZzxCR9QwRWc8QkfUMEVnv48fPX198Q01zJT24q6Y5SQ9Oapp3kx58R02zTXpwV01zJT04qWnuSg/uqmlO0oMrNc1dhoisZ4jIeoaIrGeIyHqGiKxniMh6hois91nTnKQHJ+nBXTXNXTXNXenBO6pp7koP7qppTtKDu2qau2qak/TgFWqau9KDp6QHVwwRWc8QkfUMEVnPEJH1DBFZzxCR9T5+/Pz1xUFNc1d68I5qmpP04Ak1zUl68JSa5kp6cFLTXEkPTmqap6QHT6hpTtKDk5rmFdKDK4aIrGeIyHqGiKxniMh6hoisZ4jIeoaIrPfx4+evL76hprmSHjylpjlJD+QvNc1d6cGVmuY70oMrNc1JenBXTXMlPTipae5KD17BEJH1DBFZzxCR9QwRWc8QkfUMEVnvs6Z5RzXNSXpwV03zCunBSU1zV3rwlJrmSnpwUtPclR6c1DRX0oO7apqT9OAd1TRXDBFZzxCR9QwRWc8QkfUMEVnPEJH1DBFZ75MH1TRPqWlO0oO70oMn1DTfkR5cqWmekh48paa5kh6cpAdPSA9OapqnpAdXapqT9OCKISLrGSKyniEi6xkisp4hIusZIrLexx9//v7iID04qWmupAcnNc1d6cFJTfOE9OCkprmSHnxHTXMlPTipaZ6QHnxHTXNXevAKNc1JenBXTXMlPTipaa4YIrKeISLrGSKyniEi6xkisp4hIusZIrLeJ9+UHjwhPTipae5KD56SHlypad5RevCUmuYkPbhS09xV05ykB0+pae5KD+5KD64YIrKeISLrGSKyniEi6xkisp4hIusZIrLexx9//v7iDaUH31HTXEkP/o1qmrvSg7tqmrvSg6fUNFfSg7tqmpP04K6a5q704KSmuWKIyHqGiKxniMh6hoisZ4jIeoaIrPfxx5+/vzhID55S01xJD05qmpP04Ak1zUl6cKWm+Y704EpNc1d68Co1zZX04K6a5iQ9uKumuSs9OKlp7koPrhgisp4hIusZIrKeISLrGSKyniEi6xkist7HH3/+/uIgPZD3V9OcpAevUNNskx7cVdPclR6c1DRXDBFZzxCR9QwRWc8QkfUMEVnPEJH1PvmmmuYJ6cFJTXOSHlypae5KD55S05ykB0+oaU7Sg7vSg7tqmpP04EpN85Sa5q704K6a5iQ9uGKIyHqGiKxniMh6hoisZ4jIeoaIrGeIyHofP37++uI/pqY5SQ+eUNM8JT04qWmupAdPqWnuSg/uqmlO0oOn1DRX0oO7apq7DBFZzxCR9QwRWc8QkfUMEVnPEJH1PmuajdKDK+nBXTXNSXpwV3pwUtNcqWmeUtNcSQ+eUtO8Qk1zkh68o/TgiiEi6xkisp4hIusZIrKeISLrGSKyniEi633yD9KDd1TT3FXTvEJ68JT04KSmuSs9+C9JD55S07yCISLrGSKyniEi6xkisp4hIusZIrKeISLrffJNNc0T0oNXSQ+u1DQnNc2V9OApNc1JenBXTfOU9OBKTXOSHlypaU5qmneUHjzBEJH1DBFZzxCR9QwRWc8QkfUMEVnvE/mbmuau9OBKTXOSHjylprmSHpykB1dqmqekB3elByc1zZX04DtqmrtqmicYIrKeISLrGSKyniEi6xkisp4hIusZIrLeJ/I36cE7Sg/eTXrwlJrmKenBlZrmJD04SQ+u1DR3pQd3GSKyniEi6xkisp4hIusZIrKeISLrffJN6cG/TXrwCunBSU1zV3pwUtNcSQ9OappXSA9Oapor6cFJTXMlPTipaU7Sg3djiMh6hoisZ4jIeoaIrGeIyHqGiKxniMh6n/yDmmabmuau9OCkprmSHryjmuYkPbhS03xHevCEmuYkPbhS05ykB09JD67UNCfpwRVDRNYzRGQ9Q0TWM0RkPUNE1jNEZL3/AQdI1EVOuM/iAAAAAElFTkSuQmCC"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render without a wallet name 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bSxmtR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Receive Funds
          </h2>
          <div
            class="flex-1"
          >
            <div
              data-testid="ReceiveFunds__address"
            >
              <div
                class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 eMJHaj no-ligatures"
                data-testid="TransactionDetail"
              >
                <div
                  class="flex-1 space-y-2 w-40 whitespace-nowrap"
                >
                  <div
                    class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                  >
                    Address
                  </div>
                  <div
                    class="font-semibold"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                      >
                        <span
                          class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                          data-testid="Address__address"
                        >
                          abc
                        </span>
                      </div>
                      <span
                        class="flex flex-grow text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="relative focus:outline-none group"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                          />
                          <div
                            class="sc-bdfBwQ dnaihB"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="-space-x-2 whitespace-nowrap"
                >
                  <div
                    aria-label="ARK Devnet"
                    class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
                    data-testid="NetworkIcon-ARK-ark.devnet"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt"
                      data-testid="NetworkIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="abc"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                        title="abc"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <button
                class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST mt-8 w-full"
                data-testid="ReceiveFunds__toggle"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Specify Amount
                </div>
              </button>
            </div>
            <div
              class="mx-auto mt-8 w-64 h-64"
            >
              <img
                alt="QR Code"
                class="p-3 w-64 h-64 rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="ReceiveFunds__qrcode"
                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAAkTSURBVO3BQYolV69G0Z0iJ1IF1ZZA8x+CQJqIO6ba+TfdMHH8XiTBvZa/tT7++PP3FwulB3fVNFfSg6fUNHelB0+pae5KD55S01xJD+6qabYxRGQ9Q0TWM0RkPUNE1jNEZD1DRNYzRGS9T/5BevCOappXqGlO0oMrNc1TappXSA9Oapq70oOT9OAV0oN3VNNcMURkPUNE1jNEZD1DRNYzRGQ9Q0TWM0RkvU++qaZ5QnrwlJrmJD24UtOc1DRPSQ9eoaa5UtOcpAcnNc2Vmuau9OBVaponpAd3GSKyniEi6xkisp4hIusZIrKeISLrfSL/L+nBXTXNSXpwUtNcSQ9Oapq70oMrNc13pAdXapq7apqT9OC/xBCR9QwRWc8QkfUMEVnPEJH1DBFZzxCR9T6Rv6lprqQHJzXNXTXNSXpwpaY5SQ/uqmnuqmleIT2Qvxgisp4hIusZIrKeISLrGSKyniEi633yTemB/CU9uFLTnKQHJzXNXTXNXenBXTXNSXqwTXrwbgwRWc8QkfUMEVnPEJH1DBFZzxCR9QwRWe+Tf1DT/NekB1dqmpP04BXSg5Oa5kp6cFLTXEkPnlLTnKQHV2qak/Tgrprm38YQkfUMEVnPEJH1DBFZzxCR9QwRWc8QkfU+0wP5v0sPTmqaV6hpTtKDV0gPTmqau2qaJ6QH2xgisp4hIusZIrKeISLrGSKyniEi63388efvLw7Sg5Oa5h2lB3fVNHelB3fVNE9JD67UNCfpwSvUNCfpwRNqmneUHtxliMh6hoisZ4jIeoaIrGeIyHqGiKxniMh6Hz9+/vriITXNSXrwlJrm3aQHr1LTXEkPTmqaK+nBSU1zV3pwUtPclR5cqWlO0oOn1DRX0oOTmuaKISLrGSKyniEi6xkisp4hIusZIrLex4+fv744qGlO0oMrNc2/UXpwpaY5SQ9eoaY5SQ+u1DR3pQffUdNcSQ/uqmnuSg+2MURkPUNE1jNEZD1DRNYzRGQ9Q0TWM0Rkvc+a5jtqmivpwV01zUl6cFdNc1d6cFLT3JUenNQ0V9KDu9KDu2qak/TgKTXNK9Q0J+nBlZrmFQwRWc8QkfUMEVnPEJH1DBFZzxCR9T5+/Pz1xRuqab4jPbhS05ykB/82Nc1JenBXTXMlPXhKTXOSHlypae5KD05qmrvSg6fUNFcMEVnPEJH1DBFZzxCR9QwRWc8QkfUMEVnv48fPX198Q01zJT24q6Y5SQ9Oapp3kx58R02zTXpwV01zJT04qWnuSg/uqmlO0oMrNc1dhoisZ4jIeoaIrGeIyHqGiKxniMh6hois91nTnKQHJ+nBXTXNXTXNXenBO6pp7koP7qppTtKDu2qau2qak/TgFWqau9KDp6QHVwwRWc8QkfUMEVnPEJH1DBFZzxCR9T5+/Pz1xUFNc1d68I5qmpP04Ak1zUl68JSa5kp6cFLTXEkPTmqap6QHT6hpTtKDk5rmFdKDK4aIrGeIyHqGiKxniMh6hoisZ4jIeoaIrPfx4+evL76hprmSHjylpjlJD+QvNc1d6cGVmuY70oMrNc1JenBXTXMlPTipae5KD17BEJH1DBFZzxCR9QwRWc8QkfUMEVnvs6Z5RzXNSXpwV03zCunBSU1zV3rwlJrmSnpwUtPclR6c1DRX0oO7apqT9OAd1TRXDBFZzxCR9QwRWc8QkfUMEVnPEJH1DBFZ75MH1TRPqWlO0oO70oMn1DTfkR5cqWmekh48paa5kh6cpAdPSA9OapqnpAdXapqT9OCKISLrGSKyniEi6xkisp4hIusZIrLexx9//v7iID04qWmupAcnNc1d6cFJTfOE9OCkprmSHnxHTXMlPTipaZ6QHnxHTXNXevAKNc1JenBXTXMlPTipaa4YIrKeISLrGSKyniEi6xkisp4hIusZIrLeJ9+UHjwhPTipae5KD56SHlypad5RevCUmuYkPbhS09xV05ykB0+pae5KD+5KD64YIrKeISLrGSKyniEi6xkisp4hIusZIrLexx9//v7iDaUH31HTXEkP/o1qmrvSg7tqmrvSg6fUNFfSg7tqmpP04K6a5q704KSmuWKIyHqGiKxniMh6hoisZ4jIeoaIrPfxx5+/vzhID55S01xJD05qmpP04Ak1zUl6cKWm+Y704EpNc1d68Co1zZX04K6a5iQ9uKumuSs9OKlp7koPrhgisp4hIusZIrKeISLrGSKyniEi6xkist7HH3/+/uIgPZD3V9OcpAevUNNskx7cVdPclR6c1DRXDBFZzxCR9QwRWc8QkfUMEVnPEJH1PvmmmuYJ6cFJTXOSHlypae5KD55S05ykB0+oaU7Sg7vSg7tqmpP04EpN85Sa5q704K6a5iQ9uGKIyHqGiKxniMh6hoisZ4jIeoaIrGeIyHofP37++uI/pqY5SQ+eUNM8JT04qWmupAdPqWnuSg/uqmlO0oOn1DRX0oO7apq7DBFZzxCR9QwRWc8QkfUMEVnPEJH1PmuajdKDK+nBXTXNSXpwV3pwUtNcqWmeUtNcSQ+eUtO8Qk1zkh68o/TgiiEi6xkisp4hIusZIrKeISLrGSKyniEi633yD9KDd1TT3FXTvEJ68JT04KSmuSs9+C9JD55S07yCISLrGSKyniEi6xkisp4hIusZIrKeISLrffJNNc0T0oNXSQ+u1DQnNc2V9OApNc1JenBXTfOU9OBKTXOSHlypaU5qmneUHjzBEJH1DBFZzxCR9QwRWc8QkfUMEVnvE/mbmuau9OBKTXOSHjylprmSHpykB1dqmqekB3elByc1zZX04DtqmrtqmicYIrKeISLrGSKyniEi6xkisp4hIusZIrLeJ/I36cE7Sg/eTXrwlJrmKenBlZrmJD04SQ+u1DR3pQd3GSKyniEi6xkisp4hIusZIrKeISLrffJN6cG/TXrwCunBSU1zV3pwUtNcSQ9OappXSA9Oapor6cFJTXMlPTipaU7Sg3djiMh6hoisZ4jIeoaIrGeIyHqGiKxniMh6n/yDmmabmuau9OCkprmSHryjmuYkPbhS03xHevCEmuYkPbhS05ykB09JD67UNCfpwRVDRNYzRGQ9Q0TWM0RkPUNE1jNEZL3/AQdI1EVOuM/iAAAAAElFTkSuQmCC"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
